<resources>
    <string name="app_name">E-Commerce</string>
    <string name="enter_email">Enter Email....</string>
    <string name="enter_password">Enter Password…</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back">Go back</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="password_label">Password:</string>
    <string name="email_label">Email:</string>
    <string name="weak_password">Weak Password</string>
    <string name="strong_password">Strong Password</string>
    <string name="product_name">Name:</string>
    <string name="enter_quantity">Enter Quantity…</string>
    <string name="quantity">Quantity:</string>
    <string name="unit_price">Unit Price(€):</string>
    <string name="enter_product_name">Enter Product Name…</string>
    <string name="enter_unit_price">Enter Unit Price…</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="view_shopping_list">View shopping list</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_banner_text">Checkout</string>
    <string name="total_value">Total Value:</string>
    <string name="number_of_items">Number of Items:</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="cancel_purchase">Cancel Purchase</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_expiry_date">Expiry Date:</string>
    <string name="card_number">Number:</string>
    <string name="enter_card_number">Enter Card Number…</string>
    <string name="enter_card_expiry_date">MM-YYYY…</string>
    <string name="shopping_list_is_empty">Shopping list is empty!</string>
    <string name="back_to_homepage">Back to homepage</string>
</resources>