<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    tools:context=".MainMenu">


    <item android:id="@+id/action_profile"
        android:title="@string/profile"
    android:orderInCategory="10"
    app:showAsAction="never" />

    <item android:id="@+id/action_info"
        android:title="@string/information"
        android:orderInCategory="10"
        android:icon=
            "@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="10"
        app:showAsAction="never" />

</menu>