<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_purchase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PurchaseActivity">


    <androidx.constraintlayout.utils.widget.MotionLabel
        android:id="@+id/output_text"
        android:layout_width="382dp"
        android:layout_height="100dp"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/search_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_product"
        android:layout_width="353dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:background="@color/light_grey"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="124dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="@string/product_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/product_quantity_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/product_quantity_label"
        android:layout_width="122dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/quantity"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/product_unit_price_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <TextView
        android:id="@+id/product_unit_price_label"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/unit_price"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_product_name"
        app:layout_constraintBottom_toTopOf="@+id/edit_product_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/product_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <EditText
        android:id="@+id/edit_product_quantity"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_quantity"
        app:layout_constraintBottom_toTopOf="@+id/edit_product_unit_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/product_quantity_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/edit_product_unit_price"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/enter_unit_price"
        app:layout_constraintBottom_toTopOf="@+id/view_shopping_list_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/product_unit_price_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_to_shopping_list_button"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:text="@string/add_to_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_unit_price_label"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/view_shopping_list_button"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:text="@string/view_shopping_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/add_to_shopping_list_button"
        app:layout_constraintTop_toBottomOf="@+id/product_unit_price_label"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="80dp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_shopping_list_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>