<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/email_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />


    <TextView
        android:id="@+id/password_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/password_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/password_toggle"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/password_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/password_validation"
        android:layout_width="153dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_toggle" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_validation"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_validation"
        app:layout_constraintVertical_bias="0.106" />


</androidx.constraintlayout.widget.ConstraintLayout>